deployment/kubernetes/db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: swap-reporting-db # Service name used for internal communication
  namespace: swap-reporting
spec:
  selector:
    app: swap-reporting-db
  ports:
  - protocol: TCP
    port: 5432 # Service port
    targetPort: 5432 # Container port
  clusterIP: None # Headless Service for StatefulSet - allows direct pod access via DNS
